--- a/cardi-on/app/views/roles/edit.phtml
+++ b/cardi-on/app/views/roles/edit.phtml
@@ -17,6 +17,14 @@
 <table>
     <tr>
         <td align="right">
+            <label for="rol_nombre">Rol Of Id</label>
+        </td>
+        <td align="left">
+            <?php echo $this->tag->label(array("rol_id", "size" => 30)) ?>
+        </td>
+    </tr>
+    <tr>
+        <td align="right">
             <label for="rol_nombre">Rol Of Nombre</label>
         </td>
         <td align="left">
